Changes made to admin panel

--- a/cards/index.html
+++ b/cards/index.html
@@ -3,6 +3,8 @@ layout: default
 title: All Cards
 ---
 
+<img src="{{ site.img_src }}" alt="Krögargruppen logga" />
+
 <h1>List of Cards</h1>
 
 <ul>
